2005-10-14  Vincent Noel <vnoel@cox.net>

	* Makefile.am:
	* config.c:
	* configdata.h:
	* logview.c: (main): Remove some leftovers.

2005-10-14  Vincent Noel <vnoel@cox.net>

	* TODO: Remove the gnome-vfs monitoring (it's done)

2005-10-14  Vincent Noel <vnoel@cox.net>

	* info.c: (loginfo_repaint), (loginfo_quit), (loginfo_close),
	(loginfo_new):
	* info.h:
	* logview.c: Shuffling and cleaning up.

2005-10-14  Vincent Noel  <vnoel@cox.net>

	* info.c (RepaintLogInfo): Use
	gnome_vfs_format_file_size_for_display to show the file size.
	* log_repaint.c (logview_update_statusbar): We have the info,
	might as well show it in the status bar.

2005-10-13  Vincent Noel  <vnoel@cox.net>

	* help/C/gnome-system-log.xml: Small tweaking.

2005-10-13  Vincent Noel <vnoel@cox.net>

	* help/C/gnome-system-log.xml: Some more updates.

2005-10-13  Vincent Noel <vnoel@cox.net>

	* help/C/gnome-system-log.xml: Update the help from
	gnome-system-log 2.4 to 2.12.

2005-10-13  Vincent Noel  <vnoel@cox.net>

	* logview.c (LoadLogMenu): String change.

2005-10-13  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (tree_path_find_row),
	(handle_selection_changed_cb):
	* logview.c: (save_session), (main):
	* logview.h: Cleanups.

2005-10-13  noel  <vnoel@cox.net>

	* log_repaint.c (iterate_thru_children): Removed. Whee !

2005-10-13  Vincent Noel  <vnoel@cox.net>

	* logview.c: (save_session), (main), (logview_count_logs): *
	misc.c: (ShowErrMessage): Correctly parse the command line option
	when started from session manager. Correctly save the opened log
	when saving the session. Fix part of bug #156507.

2005-10-13  Vincent Noel  <vnoel@cox.net>

	* logview.c: (logview_select_log), (loglist_selection_changed):
	Make sure the calendar selection works at startup too.

2005-10-13  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (handle_selection_changed_cb): When selecting a
	log line, select the associated day in the calendar. Fix bug #310110.

2005-10-13  Vincent Noel  <vnoel@cox.net>
