@@ -1,5 +1,12 @@
 2005-10-14  Vincent Noel <vnoel@cox.net>
 
+	* log_repaint.c: (selection_changed_cb), (logline_get_date),
+	(model_fill_date_iter):
+	* log_repaint.h:
+	* logview.c: (CreateMainWin): Use g_date_strftime instead of strftime.
+
+2005-10-14  Vincent Noel <vnoel@cox.net>
+
 	* Makefile.am:
 	* config.c:
 	* configdata.h:
